submit/11610634-project2/test/test_2_b01.out
Error type 18 at Line 13: Only Bool can be used in the if()/while()
