submit/11610634-project2/test/test_2_b01.spl
bool equal(int a, int b){
    return a==b;
}

int add(int a, int b){
    return a+b;
}

int main(){
    if(equal(1,2)){
        int a;
    }
    if(add(1,2)){
        int b;
    }
    return 0;
}